frontend/test/should_fail/deque_007.grg
using deque_model_001;

rule concatenateWrongType {
	a:A;

	modify {
		eval {
			a.stringDeque = a.stringDeque + ] a.intValue [; // no implicit cast without the type prefix
		}
	}
}
